--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <script src="./tasks1.js"></script> -->
+    <!-- <script src="./tasks2.js"></script> -->
+    <!-- <script src="./tasks3.js"></script> -->
+    <!-- <script src="./tasks4.js"></script> -->
+    <script src="./tasks5.js"></script>
+    <!-- <script src="./tasks6.js"></script> -->
+    <!-- <script src="./tasks7.js"></script> -->
+    <!-- <script src="./tasks8.js"></script> -->
+    <!-- <script src="./tasks9.js"></script> -->
+    <!-- <script src="./tasks10.js"></script> -->
+    <!-- <script src="./tasks11.js"></script> -->
+    <!-- <script src="./tasks12.js"></script> -->
+
+
 </head>
 <body>
     <h1>5 - dars</h1>
