--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <script src="./tasks2.js"></script> -->
     <!-- <script src="./tasks3.js"></script> -->
     <!-- <script src="./tasks4.js"></script> -->
-    <script src="./tasks5.js"></script>
+    <!-- <script src="./tasks5.js"></script> -->
     <!-- <script src="./tasks6.js"></script> -->
     <!-- <script src="./tasks7.js"></script> -->
     <!-- <script src="./tasks8.js"></script> -->
